--- a/code/external.css
+++ b/code/external.css
@@ -749,3 +749,234 @@
  .Head3{
 margin-left: 10px;
  }
+ .cards-3{
+    width: auto;
+    height:auto;
+    display: flex;
+    margin-left:60px;
+    flex-wrap:wrap;
+    position: absolute;
+    top:970px;
+}
+.flex-3{
+    display: flex;
+    width:270px;
+    height:370px;
+    border-radius: 25px;
+    border: 1px solid  rgba(7, 216, 171, 0.349);
+    margin:20px;
+    margin-top:60px;
+    line-height:540px;
+    font-size: 16px;
+    color: rgba(82, 81, 81, 0.774);
+    padding-left: 40px;
+    text-align: left;
+    justify-content:left;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ }
+.pic-23{
+    position: absolute;
+    margin-top: 10px;
+    margin-left:-29px;
+    border-radius: 10px;
+    line-height: 50px;
+}
+.pic-23:hover{
+    opacity: 2px;
+}   
+.pic-24{
+    position: absolute;
+    margin-top: 10px;
+    margin-left:-29px;
+    border-radius: 10px;
+    line-height: 50px;
+}
+.pic-25:hover{
+    transform:scale(1.1);
+}
+.pic-25{
+    position: absolute;
+    margin-top: 10px;
+    margin-left:-29px;
+    border-radius: 10px;
+    line-height: 50px;
+}
+.pic-26{
+    position: absolute;
+    margin-top: 10px;
+    margin-left:-29px;
+    border-radius: 10px;
+    line-height: 50px;
+}
+.pic-27{
+    position: absolute;
+    margin-top: 10px;
+    margin-left:-29px;
+    border-radius: 10px;
+    line-height: 50px;
+}
+.pic-28{
+    position: absolute;
+    margin-top: 10px;
+    margin-left:-29px;
+    border-radius: 10px;
+    line-height: 50px;
+}
+.pic-29{
+    position: absolute;
+    margin-top: 10px;
+    margin-left:-29px;
+    border-radius: 10px;
+    line-height: 50px;
+}
+.pat-2{
+    width: auto;
+    height:auto;
+    display: flex;
+    margin-left:-57px;  
+    bottom:420px;
+    position: relative;
+   }
+.feat-2{
+   margin:80px;
+   line-height: 480px;
+   font-size: 17px;
+   color:black;
+   padding-left: 10px;
+   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.login{
+    margin-left: -90px;
+    background-color: hsl(0, 0%, 89%);
+  }
+.login1{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-left: 200px;
+    font-weight: 400;
+    font-size: 20px;
+    color: rgb(57, 88, 57);
+    border: 1px solid rgb(194, 244, 216);
+}
+h1{
+    font-size: 25px;
+    font-weight: 550;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.login-box{
+    border: 1px solid hsl(0, 1%, 86%);
+    width: 550px;
+    height:300px;
+    padding: 30px;
+    margin-top: 60px;
+    border-radius: 5px;
+    margin-left: 120px;
+}
+.email{
+    padding: 10px;
+    margin-top: 15px;
+    width: 490px;
+    height: 50px;
+    border: 1px solid hsl(0, 1%, 86%);
+    border-radius: 3px;
+    padding-left: 15px;
+    margin-left: 1px;
+    font-size: 20px;
+}
+.password{
+    padding: 10px;
+    width: 490px;
+    height:50px;
+    border: 1px solid hsl(0, 1%, 86%);
+    border-radius: 3px;
+    padding-left: 15px;
+    font-size: 20px;
+    margin-left: 2px;
+    margin-top: -10px;
+}
+.loginbtn{
+    border: none;
+    border-radius: 3px;
+    background-color: rgb(0, 128, 68);
+    color: white;
+    padding: 10px;
+    font-weight: 650px;
+    font-size: 22px;
+    height:55px;
+    width:115px;
+    margin-top: -5px;
+    margin-left: 2px;
+}
+.account-box{
+    border: 0.5px solid hsl(0, 1%, 86%);
+    width: 600px;
+    height:420px;
+    padding: 30px;
+    margin-top: -300px;
+    border-radius: 8px;
+    position: absolute;
+    margin-left: 690px; 
+}
+h2{
+    margin-left: 5px;
+    margin-top: -10px;
+    font-weight: 500;
+}
+.account{
+    padding: 10px;
+    margin-top: 10px;
+    width: 530px;
+    height:50px;
+    font-size: 20px;
+    border: 1px solid hsl(0, 1%, 86%);
+    border-radius: 5px;
+    padding-left: 15px;
+    margin-left: 5px;
+}
+.account-1{
+    padding: 10px;
+    margin-top: -5px;
+    width: 530px;
+    height:50px;
+    font-size: 20px;
+    border: 1px solid hsl(0, 1%, 86%);
+    border-radius: 5px;
+    padding-left: 15px;
+    margin-left: 5px;
+}
+.password-1{
+    padding: 10px;
+    margin-top: -5px;
+    width: 530px;
+    height:50px;
+    font-size: 20px;
+    border: 1px solid hsl(0, 1%, 86%);
+    border-radius: 5px;
+    padding-left: 15px;
+    margin-left: 5px;
+}
+.password-2{
+    padding: 10px;
+    margin-top: -6px;
+    width: 530px;
+    height:50px;
+    font-size: 20px;
+    border: 1px solid hsl(0, 1%, 86%);
+    border-radius: 5px;
+    padding-left: 15px;
+    margin-left:5px;
+}
+.loginbtn1{
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(0, 128, 68);
+    color: white;
+    font-size: 20px;
+    font-weight: 400;
+    height:50px;
+    width:200px;
+    padding-left: 25px;
+    padding-right: 25px;
+    margin-left: 5px;
+    margin-top: -7px;
+}
