--- a/code/external.css
+++ b/code/external.css
@@ -920,7 +920,9 @@ h1{
 h2{
     margin-left: 5px;
     margin-top: -10px;
-    font-weight: 500;
+    font-weight: 550;
+    font-size: 24px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .account{
     padding: 10px;
